--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-rollup-boilerplate",
-  "version": "0.1.0",
-  "description": "A boilerplate for building React libraries",
+  "name": "react-planck",
+  "version": "0.0.1",
+  "description": "React fiber renderer and component container for Planck.js",
   "main": "dist/index.js",
-  "repository": "https://github.com/psychobolt/react-rollup-boilerplate.git",
+  "repository": "https://github.com/psychobolt/react-planck.git",
   "author": "psychobolt",
   "license": "MIT",
   "scripts": {
@@ -67,6 +67,7 @@
     "flow-bin": "^0.59.0",
     "flow-typed": "2.2.3",
     "jest": "^21.2.1",
+    "planck-js": "^0.1.34",
     "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -79,8 +80,15 @@
     "rollup-plugin-uglify": "^2.0.1",
     "uglify-es": "^3.1.9"
   },
-  "dependencies": {},
+  "dependencies": {
+    "fbjs": "0.8.16",
+    "lodash": "^4.17.4",
+    "prop-types": "15.6.0",
+    "react-reconciler": "0.7.0",
+    "stage-js": "^0.8.9"
+  },
   "peerDependencies": {
+    "planck-js": "^0.1.34",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
