support width/height Testbed props

--- a/stories/package.json
+++ b/stories/package.json
@@ -1,4 +1,7 @@
 {
     "name": "stories",
-    "version": "0.1.0"
+    "version": "0.1.0",
+    "dependencies": {
+        "re-resizable": "^4.1.2"
+    }
 }
