--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      // List aliases here, for example:
-      "default-export": ["./packages/default-export/src/index.js"],
+      "react-planck": ["./src/index.js"],
     }
   }
 }
