--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-planck",
-  "version": "0.0.53",
+  "version": "0.0.54-alpha.0",
   "description": "React fiber renderer and component container for Planck.js",
   "main": "dist/index.js",
   "repository": "https://github.com/psychobolt/react-planck.git",
